[package]
name = "serum-swap"
version = "0.4.0"
edition = "2018"
license = "Apache-2.0"
description = "Swap on the Serum DEX"
authors = ["Serum Foundation <foundation@projectserum.com>"]
repository = "https://github.com/project-serum/swap"

[lib]
crate-type = ["cdylib", "lib"]
name = "serum_swap"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.18.2"
anchor-spl = { version = "0.18.2", features = ["dex"] }
solana-program = "1.7.8"
